--- a/src/app/user-navbar/user-navbar.component.html
+++ b/src/app/user-navbar/user-navbar.component.html
@@ -13,6 +13,9 @@
             <a class="nav-link active" aria-current="page" routerLink="/registerComplaint" >Register Complaint</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/userPortal" >View Complaint</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="/userLogin" (click)="RemoveId()">Logout</a>
           </li>
           <li class="nav-item">
