--- a/src/app/add-complaint-page/add-complaint-page.component.html
+++ b/src/app/add-complaint-page/add-complaint-page.component.html
@@ -1,5 +1,5 @@
 <app-user-navbar></app-user-navbar>
-<h3>Register Complaint</h3>
+<h3>Register your Complaint</h3>
 <div class="container">
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
