--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,4 +1,4 @@
-<app-user-navbar></app-user-navbar>
+<app-user-logout-navbar></app-user-logout-navbar>
 <h1>Welcome User!</h1>
 <div class="container">
     <div class="row">
