--- a/src/app/user-regn/user-regn.component.html
+++ b/src/app/user-regn/user-regn.component.html
@@ -1,4 +1,4 @@
-<app-user-navbar></app-user-navbar>
+<app-user-logout-navbar></app-user-logout-navbar>
 <h1>User Registeration Page</h1>
 <div class="container">
     <div class="row">
